@@ -240,6 +240,8 @@ Bug Fixes:
     recursion limit above that leaves iter() and list() open to step
     on nearby mudstate structures including help and global_registers.
  -- Disable WHO in Firan build (Issue 218).
+ -- Fixed crash due to failure to clear @program data after logout
+    (Issue 217).  Found and fixed by Alierak.
 
 
 Performance Enhancements:
